Animated quote for photography page and made more room between quote and cart item. Animation doesn't quite work correctly, as the quote is visible on initial scroll down and animation requires user to scroll back up then back down. 60 mins worked on this so far

--- a/site.css
+++ b/site.css
@@ -285,6 +285,7 @@ h2{
 	font-family: Gotham-Black;
 	color:white;
 	text-align: center;
+	padding-bottom: 50px;
 }
 
 .book-wrapper{
